# AI-Infra-Guard

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  Dockerfile  Dockerfile_Agent  IMPLEMENTATION_SUMMARY.md  NOTICE  QUICK_START.md  README.md  README_JA.md  README_ZH.md  SECURITY.md  api.md  api_ja.md  api_zh.md  docker-compose.yml  docker.sh  index.html  openclaw.md  skill.md  ssrf.html  start.sh  二次开发说明文档.md
agent-scan/: README.md  README_zh.md  agent_security_review_report.xml  main.py  providers.yaml  pyproject.toml  requirements.txt  security_report.xml  test_client_connect.py  test_llm_error_handling.py  test_websocket_provider.py
agent-scan/agent_scan/: __init__.py  __main__.py  main.py
agent-scan/agent_scan/config/: provider_config_en.json
agent-scan/agent_scan/core/: agent.py  base_agent.py
agent-scan/agent_scan/tools/: __init__.py  dispatcher.py  registry.py  test_dispatcher.py
agent-scan/agent_scan/utils/: aig_logger.py  config.py  file_utils.py  llm.py  llm_manager.py  logging.py  parse.py  path_utils.py  prompt_manager.py  todo_manager.py  tool_context.py
agent-scan/agents/: ssrf.md
agent-scan/config/: provider_config_en.json  provider_config_zh.json
agent-scan/core/: agent.py  base_agent.py
agent-scan/core/agent_adapter/: adapter.py  connectivity.py  dialogue.py  providers.yaml
agent-scan/core/report/: __init__.py  models.py  report.py
agent-scan/prompt/agents/: agent_scanner.md  agent_security_reviewer.md  data_leakage_detection.md  main.md  project_summary.md  ssrf.md
agent-scan/prompt/system/: agent_security_report.md  agent_security_reviewer.md  agent_vulnerability_detector.md  data_leakage_evaluator.md  format_report.md  project_summary.md  security_scan_report_format.md  skill_runner.md  system_prompt.md  vulnerability_detctor.md
agent-scan/testcase/case1/: main1.py
agent-scan/testcase/case2/: README.md  exfil_server.py  memory_heist_agent.py  memory_heist_article.md  memory_heist_update_notes.md  provider.yaml
agent-scan/testcase/case3/: README.md  main.py  provider.yaml
agent-scan/tools/: __init__.py  dispatcher.py  registry.py  test_dispatcher.py
agent-scan/tools/agent_adapter/: __init__.py  adapter.py  connectivity.py  dialogue.py
agent-scan/tools/bash/: __init__.py
agent-scan/tools/batch/: __init__.py  batch.py
agent-scan/tools/dialogue/: __init__.py  dialogue.py  dialogue_schema.xml  scan.py  scan_schema.xml
agent-scan/tools/edit/: edit_schema.xml
agent-scan/tools/file/: __init__.py  write.py  write_schema.xml
agent-scan/tools/finish/: finish_actions.py
agent-scan/tools/glob_tool/: glob.py
agent-scan/tools/grep/: grep.py  grep_schema.xml
agent-scan/tools/ls/: ls.py  ls_schema.xml
agent-scan/tools/scan/: README.md  __init__.py  data_leakage_scan.py  data_leakage_scan_schema.xml  evaluators.py  models.py  report.py  strategies.py
agent-scan/tools/skill/: skill.py  skill_schema.xml
agent-scan/tools/task/: __init__.py  task.py  task_schema.xml
agent-scan/tools/thinking/: __init__.py  thinking_actions.py
agent-scan/tools/todo/: __init__.py  todo_schema.xml
agent-scan/utils/: aig_logger.py  file_utils.py  llm.py  llm_manager.py  logging.py  loging.py  mcp_tools.py  parse.py  path_utils.py  project_analyzer.py  prompt_manager.py  todo_manager.py  tool_context.py
aig-mcp-scan-lite/: README.md  main.py  pyproject.toml  requirements.txt
aig-mcp-scan-lite/mcp_scan/: __init__.py  main.py
aig-mcp-scan-lite/mcp_scan/agent/: agent.py  base_agent.py
aig-mcp-scan-lite/mcp_scan/prompt/: system_prompt.md
aig-mcp-scan-lite/mcp_scan/redteam/: orchestrator.py
aig-mcp-scan-lite/mcp_scan/utils/: aig_logger.py  extract_vuln.py  llm.py  loging.py  prompt_manager.py  tool_context.py
aig-mcp-scan-lite/pytests/: test_parse.py  test_read_file.py
aig-mcp-scan-lite/testcase/case1/: main1.py
mcp-scan/: .gitignore  README.md  README_zh.md  env.example  main.py  pyproject.toml
mcp-scan/agent/: agent.py  base_agent.py
mcp-scan/mcp_scan/: __init__.py  __main__.py  main.py
mcp-scan/mcp_scan/agent/: agent.py  base_agent.py
mcp-scan/mcp_scan/redteam/: __init__.py  attacker.py  evaluator.py  report.py  strategy.py  target.py
mcp-scan/mcp_scan/tools/: __init__.py  dispatcher.py  registry.py
mcp-scan/mcp_scan/utils/: aig_logger.py  config.py  extract_vuln.py  llm_manager.py  parse.py  pre_scan.py  project_analyzer.py  sarif_formatter.py
mcp-scan/pytests/: test_parse.py  test_read_file.py
mcp-scan/redteam/: README.md  __init__.py  attacker.py  evaluator.py  orchestrator.py
mcp-scan/testcase/case1/: main1.py
mcp-scan/tools/: __init__.py  dispatcher.py  registry.py
mcp-scan/tools/bash/: bash.py  bash_schema.xml
mcp-scan/tools/edit/: __init__.py  edit.py
mcp-scan/tools/execute/: __init__.py  execute_actions.py
mcp-scan/tools/file/: __init__.py  read.py  read_file.py  read_schema.xml  write_file.py
mcp-scan/tools/finish/: __init__.py  finish_actions.py
mcp-scan/tools/glob/: __init__.py  glob_schema.xml
mcp-scan/tools/grep/: __init__.py
mcp-scan/tools/ls/: __init__.py
mcp-scan/tools/mcp_tool/: __init__.py  mcp_resource_schema.xml  mcp_tool.py
mcp-scan/tools/skill/: __init__.py
mcp-scan/tools/thinking/: thinking_actions.py
mcp-scan/tools/todo/: todo.py
mcp-scan/utils/: config.py  llm.py  llm_manager.py  loging.py  mcp_tools.py  parse.py  prompt_manager.py  tool_context.py
skill-scan/: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
skill-scan/agent/: agent.py  base_agent.py
skill-scan/prompt/agents/: code_audit.md
skill-scan/skill_scan/: __init__.py  __main__.py  main.py
skill-scan/skill_scan/agent/: agent.py  base_agent.py
skill-scan/skill_scan/prompt/: system_prompt.md
skill-scan/skill_scan/tools/: __init__.py  dispatcher.py  registry.py
skill-scan/skill_scan/utils/: aig_logger.py  config.py  llm.py  (+9 more)
skill-scan/tools/: __init__.py  dispatcher.py
skill-scan/utils/: config.py  extract_vuln.py  llm.py  llm_manager.py  loging.py  parse.py  pre_scan.py  project_analyzer.py  tool_context.py
(+3700 files in other folders)
