[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aig-mcp-scan"
version = "0.1.0"
description = "MCP Server Security Scanning Tool - an LLM-driven autonomous agent for code audit and vulnerability detection"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tencent Zhuque Lab", email = "zhuque@tencent.com" },
]
maintainers = [
  { name = "Tencent Zhuque Lab" },
]
keywords = [
  "ai-security",
  "mcp",
  "model-context-protocol",
  "red-team",
  "llm",
  "audit",
  "vulnerability",
  "ai-infra-guard",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "loguru==0.7.3",
  "mcp>=1.23.0",
  "openai==2.8.1",
  "pydantic==2.12.4",
  "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.11.5",
  "build>=1.2",
  "twine>=5.0",
]
test = [
  "requests>=2.32.0",
  "starlette==0.50.0",
  "uvicorn==0.38.0",
]

[project.scripts]
aig-mcp-scan = "mcp_scan.main:cli"

[project.urls]
Homepage = "https://github.com/Tencent/AI-Infra-Guard"
Repository = "https://github.com/Tencent/AI-Infra-Guard"
Documentation = "https://github.com/Tencent/AI-Infra-Guard/tree/main/mcp-scan"
"Bug Tracker" = "https://github.com/Tencent/AI-Infra-Guard/issues"
"Source Code" = "https://github.com/Tencent/AI-Infra-Guard/tree/main/mcp-scan"

[tool.setuptools]
packages = { find = { include = ["mcp_scan*"] } }

[tool.setuptools.package-data]
"mcp_scan" = ["py.typed"]
"mcp_scan.prompt" = ["*.md"]
"mcp_scan.prompt.agents" = ["*.md"]
"mcp_scan.prompt.agents.dynamic" = ["*.md"]
"mcp_scan.tools" = ["*.xml"]
"mcp_scan.tools.execute" = ["*.xml"]
"mcp_scan.tools.file" = ["*.xml"]
"mcp_scan.tools.finish" = ["*.xml"]
"mcp_scan.tools.mcp_tool" = ["*.xml"]
"mcp_scan.tools.thinking" = ["*.xml"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]

# ===== The sections below are dev-tool configuration; they do not affect packaging =====

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "prompt",
  ".venv",
  "logs",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F401"]
"testcase/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["pytests"]
